Complete new-product

--- a/index.html
+++ b/index.html
@@ -78,6 +78,78 @@
                 <div class=""><img src="/assets/images/brands-section/calvin.png" alt=""></div>
             </div>
         </section>
+        <section class="new-products container">
+            <div class="new-products-text">
+                <h2>NEW ARRIVALS</h2>
+            </div>
+            <div class="products">
+                <div class="product">
+                    <div class="product-img"><img src="/assets/images/new-product/1.png" alt=""></div>
+                    <div class="product-text">
+                        <div class="">
+                            <h3>T-SHIRT WITH TAPE DETAILS</h3>
+                        </div>
+                        <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                        <div class="price">
+                            <p>$120</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img"><img src="/assets/images/new-product/2.png" alt=""></div>
+                    <div class="product-text">
+                        <div class="">
+                            <h3>SKINNY FIT JEANS</h3>
+                        </div>
+                        <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                        <div class="price">
+                            <div>
+                                <p>$240</p>
+                            </div>
+                            <div class="offer">
+                                <p>$260</p>
+                            </div>
+                            <div class="percentage">
+                                -20%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img"><img src="/assets/images/new-product/3.png" alt=""></div>
+                    <div class="product-text">
+                        <div class="">
+                            <h3>CHECKERED SHIRT</h3>
+                        </div>
+                        <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                        <div class="price">
+                            <p>$180</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img"><img src="/assets/images/new-product/4.png" alt=""></div>
+                    <div class="product-text">
+                        <div class="">
+                            <h3>SLEEVE STRIPED T-SHIRT</h3>
+                        </div>
+                        <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                        <div class="price">
+                            <div>
+                                <p>$130</p>
+                            </div>
+                            <div class="offer">
+                                <p>$160</p>
+                            </div>
+                            <div class="percentage">
+                                -30%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="btn"><button>View All</button></div>
+        </section>
     </main>
 
 </body>
