Complete dress-style-section

--- a/index.html
+++ b/index.html
@@ -150,6 +150,94 @@
             </div>
             <div class="btn"><button>View All</button></div>
         </section>
+        <div class="line container"></div>
+        <section class="top-selling container">
+            <div class="new-products-text">
+                <h2>top selling</h2>
+            </div>
+            <div class="products">
+                <div class="product">
+                    <div class="product-img"><img src="/assets/images/Top-selling/1.png" alt=""></div>
+                    <div class="product-text">
+                        <div class="">
+                            <h3>VERTICAL STRIPED SHIRT</h3>
+                        </div>
+                        <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                        <div class="price">
+                            <div>
+                                <p>$212</p>
+                            </div>
+                            <div class="offer">
+                                <p>$232</p>
+                            </div>
+                            <div class="percentage">
+                                -20%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img"><img src="/assets/images/Top-selling/2.png" alt=""></div>
+                    <div class="product-text">
+                        <div class="">
+                            <h3>COURAGE GRAPHIC T-SHIRT</h3>
+                        </div>
+                        <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                        <div class="price">
+                            <div>
+                                <p>$145</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img"><img src="/assets/images/Top-selling/3.png" alt=""></div>
+                    <div class="product-text">
+                        <div class="">
+                            <h3>LOOSE FIT BERMUDA SHORTS</h3>
+                        </div>
+                        <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                        <div class="price">
+                            <p>$80</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img"><img src="/assets/images/Top-selling/4.png" alt=""></div>
+                    <div class="product-text">
+                        <div class="">
+                            <h3>FADED SKINNY JEANS</h3>
+                        </div>
+                        <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                        <div class="price">
+                            <div>
+                                <p>$210</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="btn"><button>View All</button></div>
+        </section>
+        <section class="dress-style-section container">
+            <div class="dress-style">
+                <div class="dress-style-section-text">
+                    BROWSE BY dress STYLE
+                </div>
+                <div class="dress-style-section-style">
+                    <div class="dress-style-section-style-1">
+                        <div><img src="/assets/images/dress-style-section/1.png" alt=""></div>
+                        <div><img src="/assets/images/dress-style-section/2.png" alt=""></div>
+                    </div>
+                    <div class="dress-style-section-style-2">
+                        <div><img src="/assets/images/dress-style-section/3.png" alt=""></div>
+                        <div><img src="/assets/images/dress-style-section/4.png" alt=""></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
