Complete Home Page And Move to Products Details

--- a/index.html
+++ b/index.html
@@ -238,8 +238,144 @@
                 </div>
             </div>
         </section>
+        <section class="review-section container">
+            <div class="review-section-text">
+                <div class="review-section-text-wrapper">
+                    <h3>OUR HAPPY CUSTOMERS</h3>
+                </div>
+                <div class="review-section-text-arrow">
+                    <div class="arrow"><img src="/assets/images/review-section/1.png" alt=""></div>
+                    <div class="arrow"><img src="/assets/images/review-section/2.png" alt=""></div>
+                </div>
+            </div>
+            <div class="review-section-customer">
+                <div class="review">
+                    <div class="star"><img src="/assets/images/review-section/star.png" alt=""></div>
+                    <div class="text">
+                        <div class="text-wrapper">
+                            <div class="">
+                                <h6>Sarah M.</h6>
+                            </div>
+                            <div class="img"><img src="/assets/images/review-section/green-tick.png" alt=""></div>
+                        </div>
+                        <div class="">
+                            <p>"I'm blown away by the quality and style of the clothes I received from Shop.co. From
+                                casual
+                                wear to elegant dresses, every piece I've bought has exceeded my expectations.”</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review">
+                    <div class="star"><img src="/assets/images/review-section/star.png" alt=""></div>
+                    <div class="text">
+                        <div class="text-wrapper">
+                            <div class="">
+                                <h6>Alex K.</h6>
+                            </div>
+                            <div class="img"><img src="/assets/images/review-section/green-tick.png" alt=""></div>
+                        </div>
+                        <div class="">
+                            <p>"Finding clothes that align with my personal style used to be a challenge until I
+                                discovered
+                                Shop.co. The range of options they offer is truly remarkable, catering to a variety of
+                                tastes and occasions.”</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review">
+                    <div class="star"><img src="/assets/images/review-section/star.png" alt=""></div>
+                    <div class="text">
+                        <div class="text-wrapper">
+                            <div class="">
+                                <h6>James L.</h6>
+                            </div>
+                            <div class="img"><img src="/assets/images/review-section/green-tick.png" alt=""></div>
+                        </div>
+                        <div class="">
+                            <p>"As someone who's always on the lookout for unique fashion pieces, I'm thrilled to have
+                                stumbled upon Shop.co. The selection of clothes is not only diverse but also on-point
+                                with
+                                the latest trends.”</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="offer-section container">
+            <div class="offer">
+                <div class="offer-section-text">
+                    <h5>STAY UPTO DATE ABOUT OUR LATEST OFFERS</h5>
+                </div>
+                <div class="offer-section-details">
+                    <div class="email">
+                        <div class="img"><img src="/assets/images/offer-section/email.png" alt=""></div>
+                        <div class="text"><span>Enter your email address</span></div>
+                    </div>
+                    <div class="subscribe">
+                        <p>Subscribe to Newsletter</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer container">
+        <div class="content">
+            <div class="logo">
+                <div class="logo-text">
+                    <div class="">
+                        <h6>SHOP.CO</h6>
+                    </div>
+                    <div class=""><span>We have clothes that suits your style and which you’re proud to wear. From women
+                            to men.</span></div>
+                </div>
+                <div class="social"><img src="/assets/images/footer/Social.png" alt=""></div>
+            </div>
+            <div class="help-menu">
+                <div class="text-1">Company</div>
+                <div class="text-2">
+                    <div>About</div>
+                    <div>Features</div>
+                    <div>Works</div>
+                    <div>Career</div>
+                </div>
 
+            </div>
+            <div class="help-menu">
+                <div class="text-1">Help</div>
+                <div class="text-2">
+                    <div>Customer Support</div>
+                    <div>Delivery Details</div>
+                    <div>Terms & Conditions</div>
+                    <div>Privacy Policy</div>
+                </div>
+            </div>
+            <div class="help-menu">
+                <div class="text-1">FAQ</div>
+                <div class="text-2">
+                    <div>Account</div>
+                    <div>Manage Deliveries</div>
+                    <div>Orders</div>
+                    <div>Payments</div>
+                </div>
+            </div>
+            <div class="help-menu">
+                <div class="text-1">Resources</div>
+                <div class="text-2">
+                    <div>Free eBooks</div>
+                    <div>Development</div>
+                    <div>How to - Blog</div>
+                    <div>Youtube Playlist</div>
+                </div>
+            </div>
+        </div>
+        <div class="line"></div>
+        <div class="copyrights">
+            <div class="text">
+                <p>Shop.co © 2000-2023, All Rights Reserved</p>
+            </div>
+            <div class="card"><img src="/assets/images/footer/card.png" alt=""></div>
+        </div>
+    </footer>
 </body>
 
 </html>
