--- a/product-detail.html
+++ b/product-detail.html
@@ -113,6 +113,166 @@
             </div>
 
         </section>
+        <section class="diff-section container">
+            <div class="diff-section-wrapper">
+                <div class="diff-section-item">Product Details</div>
+                <div class="diff-section-item">
+                    Rating & Reviews
+
+                </div>
+                <div class="diff-section-item">Rating & Reviews</div>
+            </div>
+            <div class="line"></div>
+
+        </section>
+        <section class="all-review-section container">
+            <div class="all-review-section-text">
+                <div class="all-review-section-text-1">
+                    <div class="t1">All Reviews</div>
+                    <div class="t2">(451)</div>
+                </div>
+                <div class="all-review-section-text-2">
+                    <div class="btn-1"><img src="/assets/images/product-details/btn-1.png" alt=""></div>
+                    <div class="btn-2"><img src="/assets/images/product-details/btn-2.png" alt=""></div>
+                    <div class="btn-3">Write a Review</div>
+                </div>
+            </div>
+            <div class="all-review-section-review">
+                <div class="review">
+                    <div class="review-text-1">
+                        <div class="star">
+                            <div class="star-img"><img src="/assets/images/product-details/star.png" alt=""></div>
+                            <div class="more-img"><img src="/assets/images/product-details/more.png" alt=""></div>
+                        </div>
+                        <div class="text">
+                            <div class="h">
+                                <div class="h-1">Samantha D.</div>
+                                <div class="h-2"><img src="/assets/images/product-details/check.png" alt=""></div>
+                            </div>
+                            <div class="p">
+                                <p>"I absolutely love this t-shirt! The design is unique and the fabric feels so
+                                    comfortable. As a fellow designer, I appreciate the attention to detail. It's become
+                                    my favorite go-to shirt."</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-text-2">
+                        <p>Posted on August 14, 2023</p>
+                    </div>
+                </div>
+                <div class="review">
+                    <div class="review-text-1">
+                        <div class="star">
+                            <div class="star-img"><img src="/assets/images/product-details/4-star.png" alt=""></div>
+                            <div class="more-img"><img src="/assets/images/product-details/more.png" alt=""></div>
+                        </div>
+                        <div class="text">
+                            <div class="h">
+                                <div class="h-1">Alex M.</div>
+                                <div class="h-2"><img src="/assets/images/product-details/check.png" alt=""></div>
+                            </div>
+                            <div class="p">
+                                <p>"The t-shirt exceeded my expectations! The colors are vibrant and the print quality
+                                    is top-notch. Being a UI/UX designer myself, I'm quite picky about aesthetics, and
+                                    this t-shirt definitely gets a thumbs up from me."</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-text-2">
+                        <p>Posted on August 15, 2023</p>
+                    </div>
+                </div>
+                <div class="review">
+                    <div class="review-text-1">
+                        <div class="star">
+                            <div class="star-img"><img src="/assets/images/product-details/star.png" alt=""></div>
+                            <div class="more-img"><img src="/assets/images/product-details/more.png" alt=""></div>
+                        </div>
+                        <div class="text">
+                            <div class="h">
+                                <div class="h-1">Ethan R.</div>
+                                <div class="h-2"><img src="/assets/images/product-details/check.png" alt=""></div>
+                            </div>
+                            <div class="p">
+                                <p>"This t-shirt is a must-have for anyone who appreciates good design. The minimalistic
+                                    yet stylish pattern caught my eye, and the fit is perfect. I can see the designer's
+                                    touch in every aspect of this shirt."</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-text-2">
+                        <p>Posted on August 16, 2023</p>
+                    </div>
+                </div>
+                <div class="review">
+                    <div class="review-text-1">
+                        <div class="star">
+                            <div class="star-img"><img src="/assets/images/product-details/4-star.png" alt=""></div>
+                            <div class="more-img"><img src="/assets/images/product-details/more.png" alt=""></div>
+                        </div>
+                        <div class="text">
+                            <div class="h">
+                                <div class="h-1">Olivia P.</div>
+                                <div class="h-2"><img src="/assets/images/product-details/check.png" alt=""></div>
+                            </div>
+                            <div class="p">
+                                <p>"As a UI/UX enthusiast, I value simplicity and functionality. This t-shirt not only
+                                    represents those principles but also feels great to wear. It's evident that the
+                                    designer poured their creativity into making this t-shirt stand out."</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-text-2">
+                        <p>Posted on August 17, 2023</p>
+                    </div>
+                </div>
+                <div class="review">
+                    <div class="review-text-1">
+                        <div class="star">
+                            <div class="star-img"><img src="/assets/images/product-details/4-star.png" alt=""></div>
+                            <div class="more-img"><img src="/assets/images/product-details/more.png" alt=""></div>
+                        </div>
+                        <div class="text">
+                            <div class="h">
+                                <div class="h-1">Liam K.</div>
+                                <div class="h-2"><img src="/assets/images/product-details/check.png" alt=""></div>
+                            </div>
+                            <div class="p">
+                                <p>"This t-shirt is a fusion of comfort and creativity. The fabric is soft, and the
+                                    design speaks volumes about the designer's skill. It's like wearing a piece of art
+                                    that reflects my passion for both design and fashion."</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-text-2">
+                        <p>Posted on August 18, 2023</p>
+                    </div>
+                </div>
+                <div class="review">
+                    <div class="review-text-1">
+                        <div class="star">
+                            <div class="star-img"><img src="/assets/images/product-details/star.png" alt=""></div>
+                            <div class="more-img"><img src="/assets/images/product-details/more.png" alt=""></div>
+                        </div>
+                        <div class="text">
+                            <div class="h">
+                                <div class="h-1">Ava H.</div>
+                                <div class="h-2"><img src="/assets/images/product-details/check.png" alt=""></div>
+                            </div>
+                            <div class="p">
+                                <p>"I'm not just wearing a t-shirt; I'm wearing a piece of design philosophy. The
+                                    intricate details and thoughtful layout of the design make this shirt a conversation
+                                    starter."</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-text-2">
+                        <p>Posted on August 19, 2023</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 
