--- a/product-detail.html
+++ b/product-detail.html
@@ -271,6 +271,9 @@
                     </div>
                 </div>
             </div>
+            <div class="all-review-section-btn">
+                <button>Load More Reviews</button>
+            </div>
         </section>
 
     </main>
