complete product-details-page

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <div class="navbar-logo">SHOP.CO</div>
                 <div class="navbar-link">
                     <ul class="links">
-                        <li>Shop <img src="/assets/images/navbar/Frame.png" alt=""></li>
+                        <li><a href="/product-detail.html">Shop <img src="/assets/images/navbar/Frame.png" alt=""></a></li>
                         <li>On Sale</li>
-                        <li>New Arrivals</li>
-                        <li>Brands</li>
+                        <li><a href="#new-arrivals">New Arrivals</a></li>
+                        <li><a href="#brands">Brands</a></li>
                     </ul>
                 </div>
                 <div class="navbar-search-bar">
@@ -69,7 +69,7 @@
             </div>
             <div class="hero-section-img"><img src="/assets/images/hero-section/hero-img.jpeg" alt=""></div>
         </section>
-        <section class="brands-section container">
+        <section class="brands-section container" id="brands">
             <div class="brands">
                 <div class=""><img src="/assets/images/brands-section/versace.png" alt=""></div>
                 <div class=""><img src="/assets/images/brands-section/zara.png" alt=""></div>
@@ -78,7 +78,7 @@
                 <div class=""><img src="/assets/images/brands-section/calvin.png" alt=""></div>
             </div>
         </section>
-        <section class="new-products container">
+        <section class="new-products container" id="new-arrivals">
             <div class="new-products-text">
                 <h2>NEW ARRIVALS</h2>
             </div>
