--- a/product-detail.html
+++ b/product-detail.html
@@ -20,7 +20,7 @@
     <header class="header">
         <nav class="nav container">
             <div class="navbar">
-                <div class="navbar-logo">SHOP.CO</div>
+                <div class="navbar-logo"><a href="/index.html   ">SHOP.CO</a></div>
                 <div class="navbar-link">
                     <ul class="links">
                         <li>Shop <img src="/assets/images/navbar/Frame.png" alt=""></li>
@@ -275,8 +275,157 @@
                 <button>Load More Reviews</button>
             </div>
         </section>
+        <section class="you-might-also-like-section container">
+            <div class="new-products-text">
+                <h2>You might also like</h2>
+            </div>
+            <div class="products">
+                <div class="product">
+                    <div class="product-img"><img src="/assets/images/product-details/p-1.png" alt=""></div>
+                    <div class="product-text">
+                        <div class="">
+                            <h3>Polo with Contrast Trims</h3>
+                        </div>
+                        <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                        <div class="price">
+                            <div>
+                                <p>$212</p>
+                            </div>
+                            <div class="offer">
+                                <p>$242</p>
+                            </div>
+                            <div class="percentage">
+                                -20%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img"><img src="/assets/images/product-details/p-2.png" alt=""></div>
+                    <div class="product-text">
+                        <div class="">
+                            <h3>Gradient Graphic T-shirt</h3>
+                        </div>
+                        <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                        <div class="price">
+                            <div>
+                                <p>$145</p>
+                            </div>
 
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img"><img src="/assets/images/product-details/p-3.png" alt=""></div>
+                    <div class="product-text">
+                        <div class="">
+                            <h3>Polo with Tipping Details</h3>
+                        </div>
+                        <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                        <div class="price">
+                            <p>$180</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img"><img src="/assets/images/product-details/p-4.png" alt=""></div>
+                    <div class="product-text">
+                        <div class="">
+                            <h3>Black Striped T-shirt</h3>
+                        </div>
+                        <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                        <div class="price">
+                            <div>
+                                <p>$120</p>
+                            </div>
+                            <div class="offer">
+                                <p>$150</p>
+                            </div>
+                            <div class="percentage">
+                                -30%
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section class="offer-section container">
+            <div class="offer">
+                <div class="offer-section-text">
+                    <h5>STAY UPTO DATE ABOUT OUR LATEST OFFERS</h5>
+                </div>
+                <div class="offer-section-details">
+                    <div class="email">
+                        <div class="img"><img src="/assets/images/offer-section/email.png" alt=""></div>
+                        <div class="text"><span>Enter your email address</span></div>
+                    </div>
+                    <div class="subscribe">
+                        <p>Subscribe to Newsletter</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer container">
+        <div class="content">
+            <div class="logo">
+                <div class="logo-text">
+                    <div class="">
+                        <h6>SHOP.CO</h6>
+                    </div>
+                    <div class=""><span>We have clothes that suits your style and which you’re proud to wear. From women
+                            to men.</span></div>
+                </div>
+                <div class="social"><img src="/assets/images/footer/Social.png" alt=""></div>
+            </div>
+            <div class="help-menu">
+                <div class="text-1">Company</div>
+                <div class="text-2">
+                    <div>About</div>
+                    <div>Features</div>
+                    <div>Works</div>
+                    <div>Career</div>
+                </div>
+
+            </div>
+            <div class="help-menu">
+                <div class="text-1">Help</div>
+                <div class="text-2">
+                    <div>Customer Support</div>
+                    <div>Delivery Details</div>
+                    <div>Terms & Conditions</div>
+                    <div>Privacy Policy</div>
+                </div>
+            </div>
+            <div class="help-menu">
+                <div class="text-1">FAQ</div>
+                <div class="text-2">
+                    <div>Account</div>
+                    <div>Manage Deliveries</div>
+                    <div>Orders</div>
+                    <div>Payments</div>
+                </div>
+            </div>
+            <div class="help-menu">
+                <div class="text-1">Resources</div>
+                <div class="text-2">
+                    <div>Free eBooks</div>
+                    <div>Development</div>
+                    <div>How to - Blog</div>
+                    <div>Youtube Playlist</div>
+                </div>
+            </div>
+        </div>
+        <div class="line"></div>
+        <div class="copyrights">
+            <div class="text">
+                <p>Shop.co © 2000-2023, All Rights Reserved</p>
+            </div>
+            <div class="card"><img src="/assets/images/footer/card.png" alt=""></div>
+        </div>
+    </footer>
 </body>
 
 </html>
