update move to the page style

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <div class="navbar-logo">SHOP.CO</div>
                 <div class="navbar-link">
                     <ul class="links">
-                        <li><a href="/product-detail.html">Shop <img src="/assets/images/navbar/Frame.png" alt=""></a></li>
+                        <li><a href="/product-detail.html">Shop <img src="/assets/images/navbar/Frame.png" alt=""></a>
+                        </li>
                         <li>On Sale</li>
                         <li><a href="#new-arrivals">New Arrivals</a></li>
                         <li><a href="#brands">Brands</a></li>
@@ -50,7 +51,8 @@
                         <p>Browse through our diverse range of meticulously crafted garments, designed to bring out your
                             individuality and cater to your sense of style.</p>
                     </div>
-                    <div class="btn"><button>Shop Now</button></div>
+                    <div class="btn"><a href="/shop-now.html"><button style="cursor: pointer;">Shop Now</button></a>
+                    </div>
                 </div>
                 <div class="hero-section-text-numbers">
                     <div class="brands">
